@@ -1,6 +1,7 @@
 10
 
 * es, fr translation
+* rotated cards to enable larger/longer text strings
 
 9
 
